Update navigation in index.html to comment out the search link and add an about link

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
                 <a href="#create" class="nav-link">
                     <i class="fas fa-edit"></i> Create
                 </a>
-                <a href="#search" class="nav-link">
+                <!-- <a href="#search" class="nav-link">
                     <i class="fas fa-search"></i> Search
+                </a> -->
+                <a href="#about" class="nav-link">
+                    <i class="fas fa-info-circle"></i> About
                 </a>
             </div>
             <div class="nav-actions">
