--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,8 @@
             disable: 'mobile'
         });
     </script>
-    <script src="scripts.js"></script>
+    <!-- Change the script import to use modules -->
+    <script type="module" src="scripts.js"></script>
 </body>
 
 </html>
