feat: update dark mode styles and enhance article statistics display

--- a/index.html
+++ b/index.html
@@ -651,9 +651,9 @@
                             </button>
                         </div>
                         <select class="modern-select">
-                            <option>Most Recent</option>
-                            <option>Most Popular</option>
-                            <option>Trending</option>
+                            <option value="most recent">Most Recent</option>
+                            <option value="most popular">Most Popular</option>
+                            <option value="trending">Trending</option>
                         </select>
                     </div>
                 </div>
@@ -748,7 +748,7 @@
                                     </div>
                                 </div>
                                 <div class="article-stats">
-                                    <span class="stat-item"><i class="far fa-heart"></i> 192</span>
+                                    <span class="stat-item"><i class="far fa-heart"></i> 300</span>
                                     <span class="stat-item"><i class="far fa-comment"></i> 34</span>
                                 </div>
                             </div>
